<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_home_48dp"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_48dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/create_team"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/teams"
        android:icon="@drawable/ic_supervisor_48dp"
        android:title="@string/teams"
        app:showAsAction="always"
        />

</menu>