<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.EventInvitationActivity"
    android:weightSum="2">

    <TextView
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event name"
        android:gravity="center"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:textSize="26sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:maxLines="5"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:textSize="26sp"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:layout_margin="8dp"
        android:textSize="26sp"
        />
    <Button
        android:id="@+id/going"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/my_round_button"
        android:text="+" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_go"
        android:layout_margin="8dp"
        android:textSize="26sp" />
    <Button
        android:id="@+id/cantGo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/my_round_button"
        android:text="-" />


</LinearLayout>

</LinearLayout>