<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.NoActionBar"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="39dp"
            android:fontFamily="monospace"
            android:text="@string/log_in"
            android:textColor="@color/myWhite"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="55sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="vertical">

            <!-- Email text input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:hint="@string/email"
                android:textSize="23sp"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginuser_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

                <!-- Password text input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:hint="@string/password"
                    android:textSize="23sp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginpsw_edittext"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark" />
                </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginactivity_btn"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="15dp"
                android:layout_gravity="center"
                android:background="@drawable/my_color_button"
                android:text="@string/log_in_caps"
                android:textColor="@color/myWhite"
                android:textSize="24sp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/rmbr_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/remember_me"
                android:textColor="#FFC30B" />

    </LinearLayout>

</LinearLayout>