<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/main_page_logo"
        app:srcCompat="@drawable/squnion" />


    <Button
        android:id="@+id/main_login"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="162dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/my_color_button"
        android:text="@string/log_in_caps"
        android:onClick="onClickLogin"
        android:textColor="@color/myWhite" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="126dp"
        android:text="@string/or"
        android:textColor="#FFA000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="136dp"
        android:layout_toStartOf="@id/tvText"
        android:background="#FFC30B" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="136dp"
        android:layout_toRightOf="@id/tvText"
        android:background="#FFC30B" />


    <Button
        android:id="@+id/main_signup"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/my_white_button"
        android:onClick="onClickSignup"
        android:text="@string/sign_up_caps"
        android:textColor="@color/colorAccent"/>

</RelativeLayout>

