<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.NoActionBar"
    tools:context=".activities.CreateTeamActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/topBar"/>

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_below="@+id/topBar"
            android:layout_above="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/team_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_marginTop="25dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_centerHorizontal="true"
                android:text="@string/new_team_title"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="40sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTeamName"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/team_title"
                android:layout_marginTop="50dp"
                android:hint="@string/team_name"
                android:textSize="23sp"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/team_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_name"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTeamDescription"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:hint="@string/description"
                android:textSize="23sp"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_below="@+id/tilTeamName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/team_desc_et"
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    android:hint="@string/description"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_team_btn"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_below="@+id/tilTeamDescription"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/my_color_button"
                android:text="@string/create_event"
                android:textColor="@color/myWhite" />
        </RelativeLayout>

        <!-- bottom navigation -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bottomBar"
            android:layout_alignParentBottom="true">

            <include layout="@layout/bottom_navigation"/>

        </RelativeLayout>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>